--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
-    <script type="module" src="/src/main.js" defer></script>
+    <script type="module" src="/src/helpers/ejercicio-04/ejercicio-04.js" defer></script>
   </head>
   <body class="min-h-screen flex flex-col">
     <div id="app" class="flex flex-col min-h-screen">
